--- a/pages/index.pl.mdx
+++ b/pages/index.pl.mdx
@@ -9,3 +9,7 @@ Witamy w Nextrze! To jest podstawowy szablon dokumentów. Można go wykorzystać
 ## Dokumentacja
 
 Dokumentacja jest dostępna pod adresem [https://nextra.site](https://nextra.site).
+
+## Video
+Test video:
+<youtube videoId="1Y103StRUkI" />
