--- a/pages/index.pl.mdx
+++ b/pages/index.pl.mdx
@@ -10,6 +10,8 @@ Witamy w Nextrze! To jest podstawowy szablon dokumentów. Można go wykorzystać
 
 Dokumentacja jest dostępna pod adresem [https://nextra.site](https://nextra.site).
 
-## Video
-Test video:
-<youtube videoId="1Y103StRUkI" />
+import {CodePen} from 'mdx-embed'
+
+Here’s a codepen, and some other blog post text.
+
+<CodePen codePenId="1Y103StRUkI" />
